Adding Eoghan to 404 - expect htmlproof to break

--- a/404.md
+++ b/404.md
@@ -19,3 +19,4 @@ Maybe we're wrong.
 Either way, you're not getting it.
 
 We're not even sorry.
+<img src="https://lh6.googleusercontent.com/-a_h-8mI899o/AAAAAAAAAAI/AAAAAAAAADk/40hq6TAZzyU/photo.jpg" />
